--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,20 @@
     outline: none;
     padding: 10px;
 }
+.fab{
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 30px;
+    padding: 25px;
+    position: fixed;
+    right: 25px;
+}
+.fab-danger{
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 32px;
+    height: 70px;
+    left: 25px;
+    position: fixed;
+    width: 70px;
+}
